style.css
body {
  font-family: Arial, sans-serif;
  max-width: 500px;
  margin: 0 auto;
  padding: 20px;
  background: #fafafa;
}
h1,
h2 {
  color: #2c3e50;
}
h1 {
  text-decoration: underline;
  text-align: center;
}
input,
button {
  margin: 5px 0;
  padding: 10px;
  border: 1px solid #bdc3c7;
  border-radius: 4px;
}
button {
  background-color: #3498db;
  color: white;
  cursor: pointer;
  transition: background-color 0.3s;
}
button:hover {
  background-color: #2077b0;
}
table {
  border-collapse: collapse;
  width: auto;
  margin-top: 20px;
}
th,
td {
  border: 1px solid #aaa;
  padding: 8px;
  text-align: left;
  background: #fff;
}
th {
  background-color: #eee;
}
.winner {
  font-weight: bold;
}
.chart-container {
  width: 100%;
  max-width: 600px;
  margin: 20px auto;
}
#optionsList {
  list-style-type: none;
  padding: 0;
}
#optionsList li {
  background-color: #f0f0f0;
  margin: 5px 0;
  padding: 20px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
#optionsList li span {
  padding: 0 10px;
}
#voteForm {
  list-style-type: none;
  padding: 0;
}
#voteForm li {
  background-color: #f0f0f0;
  margin: 5px 0;
  padding: 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: move;
}
.drag-handle::before {
  content: "☰";
  margin-right: 10px;
  cursor: move;
}
td.winner {
  background: #bcf8bc;
  color: black;
}

.tooltip {
  position: relative;
  display: inline-block;
  cursor: pointer;
}

.tooltip .tooltiptext {
  visibility: hidden;
  width: 300px;
  background-color: #555;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  left: 50%;
  margin-left: -100px;
  opacity: 0;
  transition: opacity 0.3s;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
}

.question-mark {
  display: inline-block;
  width: 20px;
  height: 20px;
  background-color: #007bff;
  color: white;
  border-radius: 50%;
  text-align: center;
  line-height: 20px;
  font-weight: bold;
}

